k8s/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  namespace: dashboard
  labels:
    app: makeauto-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: makeauto-dashboard
  template:
    metadata:
      labels:
        app: makeauto-dashboard
    spec:
      serviceAccountName: dashboard-sa
      containers:
        - name: dashboard
          image: "us-central1-docker.pkg.dev/iot-k8s-petor/makeauto-repo/dashboard:v2"
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
